--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,7 +9,7 @@ html {
   }
   
   .card a:not([href]):not([tabindex]).scrape-new {
-    color: #2196F3;
+    color: #071b2b;
   }
   
   .footer {
@@ -18,7 +18,7 @@ html {
     width: 100%;
     height: 80px;
     color: white;
-    background-color: #2196f3;
+    background-color: #071b2b;
   }
   
   .navbar {
@@ -83,7 +83,7 @@ html {
   }
   
   .card .card-header {
-    background-color: #2196f3;
+    background-color: #071b2b;
     position: relative;
     padding-top: 30px;
     padding-bottom: 30px;
@@ -123,7 +123,7 @@ html {
     padding-left: 10px;
     margin: 0;
     font-weight: 800;
-    background: #0c7cd5;
+    background: #071b2b;
   }
   
   .navbar-nav > li > a.scrape-new,
